--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,22 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../fonts/merriweather-webfont.eot');
+    src: url('../fonts/merriweather-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/merriweather-webfont.woff2') format('woff2'),
+         url('../fonts/merriweather-webfont.woff') format('woff'),
+         url('../fonts/merriweather-webfont.ttf') format('truetype'),
+         url('../fonts/merriweather-webfont.svg#merriweatherregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
-
+*{
+	font-family: 'Merriweather', Helvetica, Arial;
+	font-size: 1em;
+}
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
